@@ -43,8 +43,10 @@ class MetafileLister(ScriptBase):
         self.add_value_option("-o", "--output", "KEY,KEY1.KEY2,...",
             action="append", default=[],
             help="select fields to print, output is separated by TABs;"
-                 " note that __file__ is the path to the metafile"
-                 " and __hash__ is the info hash")
+                 " note that __file__ is the path to the metafile,"
+                 " __hash__ is the info hash,"
+                 " and __size__ is the data size in bytes"
+         )
         # TODO: implement this
         #self.add_value_option("-c", "--check-data", "PATH",
         #    help="check the hash against the data in the given path")
@@ -97,6 +99,7 @@ class MetafileLister(ScriptBase):
 
                     data["__file__"] = filename
                     data["__hash__"] = metafile.info_hash(data)
+                    data["__size__"] = metafile.data_size(data)
                     values = []
                     for field in splitter(self.options.output):
                         try:
